# tv-guide-data

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  source_request.yml
.github/workflows/: future-coverage-warning.yml  schedule-gap-warning.yml  test.yml  update-guides.yml
config/guides/: rtve.json
config/sources/: rtve.json
output/: rtve.xml
scripts/: build.py  send_warning_email.py
src/tv_guide_data/: __init__.py  config.py  models.py  xmltv.py
src/tv_guide_data/core/: __init__.py  config.py  guide.py  http.py  models.py  source.py  xmltv.py
src/tv_guide_data/sources/: __init__.py  rtve.py
src/tv_guide_data/sources/movistar/: argentina.py
src/tv_guide_data/sources/rtve/: __init__.py  clan.py  common.py  international.py  national.py
tests/: test_channel_validation.py  test_coverage_validation.py  test_movistar_argentina_clan.py  test_rtve.py  test_rtve_clan.py  test_rtve_international.py  test_rtve_national.py  test_xmltv.py
tests/fixtures/: movistar-argentina-clan.json  rtve-clan.html  rtve-international.html  rtve-national-flight.html  rtve-national-tomorrow.html  rtve-national.html  rtve.html
