[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "tv-guide-data"
version = "0.1.0"
description = "Modular XMLTV guide generator for public television schedules"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "tv-guide-data contributors" }]
keywords = ["epg", "xmltv", "television", "kodi", "iptv"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Video",
]
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "requests>=2.32,<3",
]

[project.optional-dependencies]
dev = [
  "black>=24.10,<27",
  "mypy>=1.14,<2",
  "pre-commit>=4.0,<5",
  "pytest>=8.3,<9",
  "ruff>=0.9,<1",
  "types-requests>=2.32,<3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
files = ["src", "scripts"]
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
ignore_missing_imports = true
