[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tv-guide-data"
version = "0.2.0"
description = "Build maintainable XMLTV guides from official broadcaster sources."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "tv-guide-data contributors" }]
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "requests>=2.32,<3",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11,<3",
  "pytest>=8.3,<9",
  "ruff>=0.9,<1",
  "types-requests>=2.32",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tv_guide_data"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["tv_guide_data"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
